--- a/predicting_load_payback/notebooks/visualization.ipynb
+++ b/predicting_load_payback/notebooks/visualization.ipynb
@@ -11,8 +11,26 @@
    },
    "outputs": [],
    "source": [
-    "# Import some packages and modules needed.\n"
+    "# Import some packages and modules needed.\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pylib as plt\n",
+    "\n",
+    "# Directory of the data.\n",
+    "path = \"../data/\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32274209",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
