--- a/predicting_load_payback/notebooks/visualization.ipynb
+++ b/predicting_load_payback/notebooks/visualization.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "363cd33a",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Kaggle_cometition (Python 3.12.2)' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'conda install -n Kaggle_cometition ipykernel --update-deps --force-reinstall'"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Import some packages and modules needed.\n",
     "import numpy as np\n",
@@ -24,18 +31,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32274209",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Kaggle_cometition",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
